--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: custom_file_picker
-description: "A new Flutter package project."
+description: "The file opener hierarchy system allows custom file hierarchies that must not match the running device file system."
 version: 0.0.1
-homepage:
+homepage: https://github.com/JayKay135/custom_file_picker
 
 environment:
   sdk: '>=3.2.0 <4.0.0'
@@ -11,20 +11,23 @@ dependencies:
   flutter:
     sdk: flutter
 
+  intl: ^0.19.0
+  collection: ^1.18.0
   desktop_multi_window: ^0.2.0
-  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
 
+topics:
+  - widgets
+
 flutter:
   assets:
     - assets/
     - assets/images/
     - assets/images/folder_icon.png
-    - assets/images/folder_icon2.png
     - assets/images/text_icon.png
     - assets/images/image_icon.png
     - assets/images/arrow.png
